feat: implementa usecases centrais da operação (peso, item, pagamento)
